--- a/Presentation/App.xaml
+++ b/Presentation/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WPF_MVVM_TEMPLATE.Presentation.App"
+﻿<Application x:Class="NNTP_NewsReader.Presentation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPF_MVVM_TEMPLATE"
+             xmlns:local="clr-namespace:NNTP_NewsReader"
              StartupUri="Presentation/View/MainWindow.xaml">
     <Application.Resources>
          
